Fix height issue on mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -89,7 +89,7 @@ body {
 }
 
 .img-start {
-  max-width: 350px;
+  max-width: clamp(300px, 90%, 500px);
 }
 
 .new-game-container {
@@ -106,13 +106,13 @@ body {
 
 @media (min-width: 376px) {
   .img-play {
-      max-width: clamp(200px, 80%, 350px);
+    max-width: clamp(300px, 90%, 500px);
   }
 }
 
 @media (max-width: 375px) {
   .img-play {
-      display: none;
+    max-width: clamp(75px, 80%, 150px);
   }
 }
 
@@ -136,7 +136,7 @@ body {
   gap: var(--spacing-medium);
   padding: var(--spacing-large);
   background-color: var(--color-bg-results);
-  border-radius:var(--border-radius-medium);
+  border-radius: var(--border-radius-medium);
   border: 1px solid var(--color-border);
   /* Make line breaks (/n) display in results texts, https://developer.mozilla.org/en-US/docs/Web/CSS/white-space */
   white-space: pre-wrap;
@@ -171,7 +171,7 @@ body {
   flex-direction: column;
   justify-content: center;
   text-align: center;
-  font-size: clamp(var(--font-size-small),var(--font-size-base),var(--font-size-medium));
+  font-size: clamp(var(--font-size-small), var(--font-size-base), var(--font-size-medium));
   color: var(--color-txt-general);
   /* Set a minimum height for the results text to avoid unexpected resizing (2 lines to 3 lines) */
   min-height: 100px;
@@ -251,7 +251,7 @@ button:disabled:hover {
 }
 
 .choice-button {
-  font-size: clamp(1rem,1.1rem,1.2rem);
+  font-size: clamp(1rem, 1.1rem, 1.2rem);
   font-weight: 600;
 }
 
@@ -357,5 +357,5 @@ button:disabled:hover {
 }
 
 .footer-removed {
-  display:none;
+  display: none;
 }
